--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Portofolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+
 <header>
   <nav>
-<div class="brand">My portfolio</div>
+    <div class="brand">My portfolio</div>
     <ul class="nav-links">
       <li><a href="#project">Project</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
-
   </nav>
 </header>
-<section class="profile-right">
-  <img src="foto.jpg" alt="Poza mea">
-  <span>Barbu Maria-Emilia</span>
-  <a href="BARBU_MARIA-EMILIA_CV.pdf" target="_blank" class="cv-btn">See CV</a>
-</section>
 
-<section id="project" class="projects-right">
-  <h2>My Projects</h2>
+<main class="layout">
 
-  <div class="project-card">
-    <a href="file:///C:/Users/Maria-Emilia/AppData/Local/Temp/Rar$EXa7124.28328.rartemp/project-coffe-shop-main/index.html" target="_blank">
-      <img src="logo.png" alt="Descriere proiect">
-      <h3>Crush Coffee</h3>
-    </a>
-  </div>
-</section>
+  <section id="project" class="projects-right">
+    <h2>My Projects</h2>
+
+    <div class="project-card">
+      <a class="project-link"
+         href="https://barbu-maria-emilia.github.io/Project-caffee-shop/"
+         target="_blank" rel="noopener noreferrer">
+        <img src="logo.png" alt="Crush Coffee project" />
+        <h3>Crush Coffee</h3>
+      </a>
+    </div>
+  </section>
+
+  <section class="profile-right">
+    <img src="foto.jpg" alt="Poza mea" />
+    <span>Barbu Maria-Emilia</span>
+    <a href="BARBU_MARIA-EMILIA_CV.pdf" target="_blank" class="cv-btn">See CV</a>
+  </section>
+</main>
 
 <section id="about" class="about-section">
   <h2>About me</h2>
   <p>
     Graduate of the Faculty of Engineering and Information Technology, specializing in Computer Science, class of 2025. I am currently preparing to defend my bachelor’s thesis, focused on Infrastructure as Code and network automation.
-I have a solid basic knowledge of object-oriented programming (OOP) and experience with Python, as well as in web development (HTML, CSS, JavaScript).
-I am a curious and adaptable person, with great attention to detail and a constant desire to learn new technologies and concepts. I am looking for opportunities to further develop my skills and contribute to projects that have a real impact.
+    I have a solid basic knowledge of object-oriented programming (OOP) and experience with Python, as well as in web development (HTML, CSS, JavaScript).
+    I am a curious and adaptable person, with great attention to detail and a constant desire to learn new technologies and concepts. I am looking for opportunities to further develop my skills and contribute to projects that have a real impact.
   </p>
 </section>
 
@@ -49,13 +54,10 @@ I am a curious and adaptable person, with great attention to detail and a consta
   <h2>Contact</h2>
   <p>Email: <a href="mailto:mariaemiliabarbu18@gmail.com">mariaemiliabarbu18@gmail.com</a></p>
   <p>Telefon: <a href="tel:+40747493064">+40747493064</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/emilia-maria-a0807b269/" target="_blank">https://www.linkedin.com/in/emilia-maria-a0807b269/</a></p>
-  <p>GitHub: <a href="https://github.com/barbu-maria-emilia" target="_blank">https://github.com/barbu-maria-emilia</a></p>
-  <p>GitLab: <a href="https://gitlab.com/Emilia318/" target="_blank">https://gitlab.com/Emilia318</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/emilia-maria-a0807b269/" target="_blank" rel="noopener">https://www.linkedin.com/in/emilia-maria-a0807b269/</a></p>
+  <p>GitHub: <a href="https://github.com/barbu-maria-emilia" target="_blank" rel="noopener">https://github.com/barbu-maria-emilia</a></p>
+  <p>GitLab: <a href="https://gitlab.com/Emilia318/" target="_blank" rel="noopener">https://gitlab.com/Emilia318</a></p>
 </section>
-
-
-
 
 </body>
 </html>
