--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         <h3>Crush Coffee</h3>
       </a>
     </div>
+
+   <div class="project-card">
+    <a class="project-link"
+       href="https://barbu-maria-emilia.github.io/Game-Tic-Tac-Toe/"
+       target="_blank" rel="noopener noreferrer">
+      <img src="logo.jpg" alt="Tic Tac Toe project" loading="lazy" />
+      <h3>Tic Tac Toe</h3>
+    </a>
+   </div>
   </section>
 
   <section class="profile-right">
