--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section class="profile-right">
     <img src="./foto.jpg" alt="Poza mea" loading="lazy" />
     <span>Barbu Maria-Emilia</span>
-    <a href="./BARBU_MARIA-EMILIA_CV.pdf" target="_blank" class="cv-btn" rel="noopener">See CV</a>
+    <a href="BARBU_MARIA-EMILIA_CV.pdf" target="_blank" class="cv-btn" rel="noopener">See CV</a>
   </section>
 </main>
 
