--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <section id="about" class="about-section">
   <h2>About me</h2>
   <p>
-    Graduate of the Faculty of Engineering and Information Technology, specializing in Computer Science, class of 2025. I am currently preparing to defend my bachelor’s thesis, focused on Infrastructure as Code and network automation.
+    Graduate of the Faculty of Engineering and Information Technology, specializing in Computer Science, class of 2025. I am currently preparing to present my bachelor's thesis, focused on Infrastructure as Code and network automation.
     I have a solid basic knowledge of object-oriented programming (OOP) and experience with Python, as well as in web development (HTML, CSS, JavaScript).
-    I am a curious and adaptable person, with great attention to detail and a constant desire to learn new technologies and concepts. I am looking for opportunities to further develop my skills and contribute to projects that have a real impact.
+    I am a curious and flexible person, with great attention to detail and a constant desire to learn new technologies and concepts. I am looking for opportunities to further develop my skills and contribute to projects that have a real impact.
   </p>
 </section>
 
